[JEWEL-1388] Stop using `sun.misc.Unsafe` to resolve the native window handle
closes https://github.com/JetBrains/intellij-community/pull/3604

GitOrigin-RevId: c1ed7fbc0b2ee6ea1dd1f03b80940c5ec1449660