@@ -3,13 +3,10 @@ package org.jetbrains.jewel.intui.standalone.window.macos
 
 import androidx.compose.runtime.ProvidableCompositionLocal
 import androidx.compose.runtime.staticCompositionLocalOf
+import androidx.compose.ui.awt.ComposeWindow
 import com.sun.jna.Callback
 import com.sun.jna.Pointer
-import java.awt.Component
 import java.awt.Window
-import java.lang.reflect.Field
-import java.lang.reflect.InvocationTargetException
-import java.lang.reflect.Method
 import javax.swing.SwingUtilities
 import org.jetbrains.annotations.ApiStatus
 import org.jetbrains.annotations.VisibleForTesting
@@ -17,8 +14,6 @@ import org.jetbrains.jewel.foundation.InternalJewelApi
 import org.jetbrains.jewel.foundation.util.JewelLogger
 import org.jetbrains.jewel.intui.standalone.styling.default
 import org.jetbrains.jewel.intui.standalone.styling.macOs
-import org.jetbrains.jewel.intui.standalone.window.UnsafeAccessing
-import org.jetbrains.jewel.intui.standalone.window.accessible
 import org.jetbrains.jewel.ui.component.styling.ScrollbarVisibility
 import org.jetbrains.jewel.ui.component.styling.TrackClickBehavior
 import org.jetbrains.skiko.hostOs
@@ -56,119 +51,26 @@ public interface MacPlatformServices {
     public fun onPreferencesChanged(action: () -> Unit)
 }
 
-/**
- * Default [MacPlatformServices] implementation that uses JNA to invoke native macOS (Objective-C) APIs.
- *
- * Requires `--add-opens` access to internal JDK and AWT packages; these are granted by [UnsafeAccessing] during `init`.
- */
+/** Default [MacPlatformServices] implementation that uses JNA to invoke native macOS (Objective-C) APIs. */
 @ApiStatus.Internal
 @InternalJewelApi
 public object MacPlatformServicesDefaultImpl : MacPlatformServices {
     private val logger = JewelLogger.getInstance(MacPlatformServicesDefaultImpl::class.java.simpleName)
     private var nativeCallbackReference: Callback? = null // Keep a strong reference here to prevent GC
 
-    init {
-        try {
-            UnsafeAccessing.assignAccessibility(
-                UnsafeAccessing.desktopModule,
-                listOf("sun.awt", "sun.lwawt", "sun.lwawt.macosx"),
-            )
-        } catch (@Suppress("TooGenericExceptionCaught") e: Exception) {
-            logger.warn("Assign access for jdk.desktop failed.", e)
-        }
-    }
-
-    internal fun getWindowFromJavaWindow(w: Window?): ID {
-        if (w == null) {
-            return ID.NIL
-        }
-        try {
-            val cPlatformWindow = getPlatformWindow(w)
-            if (cPlatformWindow != null) {
-                val ptr = findFieldInHierarchy(cPlatformWindow.javaClass, "ptr")
-                if (ptr == null) {
-                    logger.warn("Fail to get cPlatformWindow from awt window: no 'ptr' field found.")
-                    return ID.NIL
-                }
-                ptr.setAccessible(true)
-                return ID(ptr.getLong(cPlatformWindow))
-            }
-        } catch (e: IllegalAccessException) {
-            logger.warn("Fail to get cPlatformWindow from awt window.", e)
-        }
-        return ID.NIL
-    }
-
     /**
-     * Returns the native `cPlatformWindow` backing the given AWT [Window] via reflection, or `null` if it cannot be
-     * retrieved.
-     */
-    public fun getPlatformWindow(w: Window): Any? {
-        try {
-            val awtAccessor = Class.forName("sun.awt.AWTAccessor")
-            val componentAccessor = awtAccessor.getMethod("getComponentAccessor").invoke(null)
-            val getPeer = componentAccessor.javaClass.getMethod("getPeer", Component::class.java).accessible()
-            val peer = getPeer.invoke(componentAccessor, w)
-            if (peer != null) {
-                // The method may be declared on a superclass of the runtime peer class (e.g., on JBR 25 the peer
-                // is sun.lwawt.macosx.LWCWindowPeer, which inherits getPlatformWindow() from sun.lwawt.LWWindowPeer),
-                // so we must search the whole class hierarchy rather than just the runtime class.
-                val getPlatformWindowMethod = findMethodInHierarchy(peer.javaClass, "getPlatformWindow")
-                if (getPlatformWindowMethod == null) {
-                    logger.warn("Fail to get cPlatformWindow from awt window: no getPlatformWindow() method found.")
-                    return null
-                }
-                val cPlatformWindow = getPlatformWindowMethod.invoke(peer)
-                if (cPlatformWindow != null) {
-                    return cPlatformWindow
-                }
-            }
-        } catch (e: IllegalAccessException) {
-            logger.warn("Fail to get cPlatformWindow from awt window.", e)
-        } catch (e: InvocationTargetException) {
-            logger.warn("Fail to get cPlatformWindow from awt window.", e)
-        } catch (e: ClassNotFoundException) {
-            logger.warn("Fail to get cPlatformWindow from awt window.", e)
-        }
-        return null
-    }
-
-    /**
-     * Finds a method with the given [name] and no parameters declared on [clazz] or any of its superclasses, or `null`
-     * if no such method exists.
+     * Returns the native `NSWindow*` backing the given AWT [Window], or [ID.NIL] if [w] isn't a [ComposeWindow] or the
+     * native surface hasn't been realized yet.
+     *
+     * Uses [ComposeWindow.windowHandle], Compose's own supported accessor, instead of reflecting into JDK-internal
+     * `sun.awt`/`sun.lwawt.macosx` classes (see JEWEL-1388).
      */
     @VisibleForTesting
     @ApiStatus.Internal
     @InternalJewelApi
-    public fun findMethodInHierarchy(clazz: Class<*>, name: String): Method? {
-        var current: Class<*>? = clazz
-        while (current != null) {
-            try {
-                return current.getDeclaredMethod(name)
-            } catch (_: NoSuchMethodException) {
-                current = current.superclass
-            }
-        }
-        return null
-    }
-
-    /**
-     * Finds a field with the given [name] declared on [clazz] or any of its superclasses, or `null` if no such field
-     * exists.
-     */
-    @VisibleForTesting
-    @ApiStatus.Internal
-    @InternalJewelApi
-    public fun findFieldInHierarchy(clazz: Class<*>, name: String): Field? {
-        var current: Class<*>? = clazz
-        while (current != null) {
-            try {
-                return current.getDeclaredField(name)
-            } catch (_: NoSuchFieldException) {
-                current = current.superclass
-            }
-        }
-        return null
+    public fun getWindowFromJavaWindow(w: Window?): ID {
+        val handle = (w as? ComposeWindow)?.windowHandle ?: 0L
+        return if (handle == 0L) ID.NIL else ID(handle)
     }
 
     public override fun updateColors(w: Window) {
